fix: buttom link

--- a/index.html
+++ b/index.html
@@ -1421,5 +1421,5 @@ $(document).ready(function() {
 <script type="text/javascript" id="google-maps-js-after">
 function mfn_google_maps_65169e7dc98fb(){var latlng = new google.maps.LatLng(47.492185,19.056968);var draggable = true;var myOptions = {zoom:15,center:latlng,mapTypeId:google.maps.MapTypeId.ROADMAP,draggable:draggable,zoomControl:true,mapTypeControl:false,streetViewControl:false,scrollwheel:false};var map = new google.maps.Map(document.getElementById("google-map-area-65169e7dc98fb"), myOptions);var marker = new google.maps.Marker({position:latlng,map:map});}jQuery(document).ready(function(){mfn_google_maps_65169e7dc98fb();});
 </script>
-<center><font size="2">This is a free demo result from the <a href="http://www.waybackmachinedownloader.com/en/">Wayback Machine</a> Downloader. It is not a complete website.</font></center></body>
+<!-- <center><font size="2">This is a free demo result from the <a href="http://www.waybackmachinedownloader.com/en/">Wayback Machine</a> Downloader. It is not a complete website.</font></center></body> -->
 </html>
