fix: language en

--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@ body { text-align: justify; }
 				</div>
 			</div>
 			<!-- Language bar -->
-			<!-- <div class="top_bar_right"><div class="top_bar_right_wrapper"><div class="wpml-languages horizontal"><ul><li class=""><a href="./en.html">EN</a></li><li class="lang-active"><a href="/">HU</a></li></ul></div></div></div> -->
+			<div class="top_bar_right"><div class="top_bar_right_wrapper"><div class="wpml-languages horizontal"><ul><li class=""><a href="./en.html">EN</a></li><li class="lang-active"><a href="/">HU</a></li></ul></div></div></div>
 		</div>
 	</div>
 </div>
