--- a/nemzeti-exportvedelmi-program.html
+++ b/nemzeti-exportvedelmi-program.html
@@ -729,7 +729,7 @@ body { text-align: justify; }
 <li id="menu-item-10" class="menu-item menu-item-type-custom menu-item-object-custom"><a href="/#about"><span>Rólunk</span></a></li>
 <li id="menu-item-12" class="menu-item menu-item-type-custom menu-item-object-custom"><a href="/#partners"><span>Partnereink</span></a></li>
 <li id="menu-item-13" class="menu-item menu-item-type-custom menu-item-object-custom"><a href="/#career"><span>Karrier</span></a></li>
-<li id="menu-item-94" class="menu-item menu-item-type-custom menu-item-object-custom"><a href="/en/Southeast-Asia.html"><span>Délkelet-Ázsia</span></a></li>
+<li id="menu-item-94" class="menu-item menu-item-type-custom menu-item-object-custom"><a href="Delkelet-Azsia.html"><span>Délkelet-Ázsia</span></a></li>
 <li id="menu-item-14" class="menu-item menu-item-type-custom menu-item-object-custom"><a href="/#contact"><span>Kapcsolat</span></a></li>
 </ul></nav><a class="responsive-menu-toggle " href="#"><i class="icon-menu-fine"></i></a>				</div>
 				<div class="secondary_menu_wrapper">
